--- a/model_app/frontend/src/containers/Team.css
+++ b/model_app/frontend/src/containers/Team.css
@@ -108,9 +108,27 @@ h3{
   margin-right: auto;
   margin-left: auto;
   margin-top: 0%;
-  font-size: 10px;
+  font-size: 20px;
 
 }
+
+h4{
+  color: white;
+  margin-right: auto;
+  margin-left: auto;
+  margin-top: 0%;
+  font-size: 15px;
+
+}
+
+p{
+  color: white;
+  margin-right: auto;
+  margin-left: auto;
+  margin-top: 0%;
+  font-size: 15px;
+}
+
 
 .ProfessionText{
   text-align: left;
