--- a/model_app/frontend/src/containers/CommentBox.css
+++ b/model_app/frontend/src/containers/CommentBox.css
@@ -52,6 +52,8 @@ button[type="submit"] {
   flex-wrap: wrap;
   max-width: 400px;
   margin: 50px auto;
+  margin-top: -40px;
+  margin-bottom: 20px;
   background: var(--white);
   border-radius: var(--border-radius);
   box-shadow: 0 0 8px rgba(0, 0, 0, 0.2);
