--- a/model_app/frontend/src/App.css
+++ b/model_app/frontend/src/App.css
@@ -31,6 +31,11 @@ address{
 .App {
   text-align: center;
 }
+
+@font-face {
+  font-family: "Montserrat", "Helvetica", "Arial", sans-serif;
+  src: url();
+}
 /*
 .App-logo {
   height: 40vmin;
