--- a/model_app/frontend/src/containers/Simulator.css
+++ b/model_app/frontend/src/containers/Simulator.css
@@ -16,12 +16,12 @@
     margin-top: 0%;
     margin-left: auto;
     margin-right: auto;
-    background-color: #143230;
+    background-color: #222629;
     width: 100%;
     min-height: 100%;
     align-self: center;
     align-items: center;
-    border-bottom:10px solid #1b4441c2;
+    //border-bottom:10px solid #1b4441c2;
     padding-bottom:5%;
     padding-right: 20px;
     padding-left: 20px;
@@ -158,7 +158,7 @@ i:hover{
     z-index: 99;
     color: black;
     background-color: 'cyan';
-    
+
   }
   .fab:hover {
     background-color: '#0fe0e0',
