fixed PR errors and issues from meeting

--- a/model_app/frontend/src/components/Header.css
+++ b/model_app/frontend/src/components/Header.css
@@ -17,5 +17,7 @@
     text-decoration: none;
     padding-right: 0;
     padding-left: 0;
+    font-family: "Montserrat", "Helvetica", "Arial", sans-serif;
+
   }
   
