attempting to make pages more responsive

--- a/model_app/frontend/src/containers/Home.css
+++ b/model_app/frontend/src/containers/Home.css
@@ -91,3 +91,17 @@ background-color: #222D3C; /* Or #1C2531 ? */
 .img-container {
     padding: 0px 20px 20px 20px;
 }
+
+/* Media Queries: Tablet Landscape */
+@media screen and (max-width: 1060px) {
+    #primary { width:67%; }
+    #secondary { width:30%; margin-left:3%;}  
+  }
+  
+  /* Media Queries: Tabled Portrait */
+  @media screen and (max-width: 768px) {
+    #primary { width:100%; }
+    #secondary { width:100%; margin:0; border:none; }
+  }
+  
+img { max-width: 100%; height: auto; }
