--- a/model_app/frontend/src/App.css
+++ b/model_app/frontend/src/App.css
@@ -31,6 +31,20 @@ address{
 .App {
   text-align: center;
 }
+
+/* Media Queries: Tablet Landscape */
+@media screen and (max-width: 1060px) {
+  #primary { width:67%; }
+  #secondary { width:30%; margin-left:3%;}  
+}
+
+/* Media Queries: Tabled Portrait */
+@media screen and (max-width: 768px) {
+  #primary { width:100%; }
+  #secondary { width:100%; margin:0; border:none; }
+}
+
+img { max-width: 100%; height: auto; }
 /*
 .App-logo {
   height: 40vmin;
