--- a/model_app/frontend/src/App.css
+++ b/model_app/frontend/src/App.css
@@ -45,6 +45,25 @@ address{
 }
 
 img { max-width: 100%; height: auto; }
+
+@media (min-device-width:600px) {
+  img[data-src-600px] {
+      content: attr(data-src-600px, url);
+  }
+}
+
+@media (min-device-width:800px) {
+  img[data-src-800px] {
+      content: attr(data-src-800px, url);
+  }
+}
+
+html { font-size:100%; }
+
+@media (min-width: 640px) { body {font-size:1rem;} } 
+@media (min-width:960px) { body {font-size:1.2rem;} } 
+@media (min-width:1100px) { body {font-size:1.5rem;} } 
+
 /*
 .App-logo {
   height: 40vmin;
