--- a/model_app/frontend/src/components/Header.css
+++ b/model_app/frontend/src/components/Header.css
@@ -6,7 +6,6 @@
 
 .NavText{
     color: white;
-
 }
 
 .Nav-link:link {
@@ -18,6 +17,29 @@
     padding-right: 0;
     padding-left: 0;
     font-family: "Montserrat", "Helvetica", "Arial", sans-serif;
+}
 
-  }
-  
+#dropdown-toggle {
+    background-color: #222629;
+    font-size: 20px;
+    border: none;
+    padding: 0;
+    margin-right: 15px;
+    font-family: "Montserrat", "Helvetica", "Arial", sans-serif;
+}
+
+#dropdown-menu{
+    background-color: #222629;
+}
+
+#dropdown-link{
+    color: #ffffff;
+}
+
+#dropdown-item:hover{
+    background-color: #000000;
+}
+
+#dropdown-item:hover > #dropdown-link{
+    color: #66FCF1;
+}
