--- a/model_app/frontend/src/components/Header.css
+++ b/model_app/frontend/src/components/Header.css
@@ -32,7 +32,8 @@
 }
 
 #dropdown-toggle::after{
-    vertical-align: 5px;
+    font-size: 24px;
+    vertical-align: 1px;
     margin-left: 10px;
 }
 
