--- a/model_app/frontend/src/containers/About.css
+++ b/model_app/frontend/src/containers/About.css
@@ -17,7 +17,7 @@
 }
 
 .button-container {
-  width: 100vh;
+  
   align-content: center;
   padding-top: 0%;
   padding-bottom: 5%;
@@ -26,7 +26,7 @@
 .CardBackground{
     background-color: #222629;
     height: 100%;
-    width: 100vh;
+    
     min-height: 100%;
     min-width: 100%;
     margin:0;
@@ -57,5 +57,20 @@ p{
     padding-right: 5%;
 }
 
+.contactCard {
+    padding-bottom: 30px;
+    background-color: rgba(125, 125, 125, 0.50)!important;
+    width: 500px;
+    margin: auto;
+}
+
+@media screen and (max-width: 500px) {
+    .contactCard {
+        padding-bottom: 30px;
+        background-color: rgba(125, 125, 125, 0.50)!important;
+        width: 100%;
+        margin: auto;
+    }
+  }
 
 body{margin:0}
