--- a/model_app/frontend/src/containers/Simulator.css
+++ b/model_app/frontend/src/containers/Simulator.css
@@ -21,7 +21,7 @@
     min-height: 100%;
     align-self: center;
     align-items: center;
-    //border-bottom:10px solid #1b4441c2;
+    border-bottom:10px solid #1b4441c2;
     padding-bottom:5%;
     padding-right: 20px;
     padding-left: 20px;
