--- a/model_app/frontend/src/components/Header.css
+++ b/model_app/frontend/src/components/Header.css
@@ -14,15 +14,23 @@
     margin-right: 15px;
     text-decoration: none;
     font-family: "Montserrat", "Helvetica", "Arial", sans-serif;
+    text-align: center;
+    padding: 0px,
 }
 
 #dropdown-toggle {
     background-color: #222629;
     font-size: 20px;
-    margin-right: 10px;
+    margin-right: 15px;
     text-decoration: none;
     border: none;
     font-family: "Montserrat", "Helvetica", "Arial", sans-serif;
+    text-align: center;
+    padding: 0px,
+}
+
+#dropdown-toogle.btn {
+    padding: '0px',
 }
 
 #dropdown-menu{
